--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,5 @@
 # header note.
 #Fri Nov 14 11:40:16 IST 2025
 sdk.dir=C\:\\Users\\prabh\\AppData\\Local\\Android\\Sdk
+
+NEWS_API_KEY=pub_def4bc8594774271aecdfb7631971a59
